# hugo-admin

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  README.md  README.zh-CN.md  __version__.py  app.py  config.py  debug_posts.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  run.sh  session-ses_0fe0.md
docs/: CACHE_USAGE.md  CHANGELOG.md  CLAUDE.md  CLIPBOARD_IMAGE_PASTE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIXES.md  FIX_SUMMARY.md  FRONTMATTER_REFACTOR.md  GITHUB_SETUP.md  QUICKSTART.md  README.md  SECURITY.md  TEST_REPORT.md  docker.md  index.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
models/: __init__.py  database.py
openspec/: project.md
proto/: plugin.proto  plugin_pb2.py  plugin_pb2_grpc.py
routes/: __init__.py  ai_routes.py  auth_routes.py  config_routes.py  email_routes.py  file_routes.py  image_routes.py  inline_edit_routes.py  page_routes.py  plugin_routes.py  post_routes.py  project_init_routes.py  publish_routes.py  references_routes.py  server_routes.py  settings_routes.py  socketio_routes.py  theme_routes.py  tts_routes.py
services/: active_project.py  ai_service.py  article_import_service.py  auth_service.py  cache_service.py  chat_history_service.py  email_service.py  frontmatter_gen_service.py  git_service.py  hugo_service.py  image_gen_service.py  plugin_manager.py  plugin_manifest.py  post_service.py  project_init_service.py  reference_service.py  registry.py  settings_service.py  theme_service.py
templates/: 404.html  500.html  base.html  editor.html  index.html  posts.html  server.html  settings.html
tests/: conftest.py  test_active_project.py  test_ai_quick_rewrite.py  test_ai_service.py  test_api.py  test_article_import_api.py  test_article_import_service.py  test_auth_api.py  test_auth_service.py  test_cache.py  test_config_api.py  test_date_format.py  (+31 more)
(+117 files in other folders)
